--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -19,4 +19,5 @@ jobs:
         uses: alex-page/blazing-fast-gh-pages-deploy@v1.1.0
         with: 
           repo-token: d1adf09408005beec611118c380ac85b1bb80c9f
+          site-directory: dist  
         
